--- a/index.html
+++ b/index.html
@@ -4,25 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Heaven and Beauty - Wellness & Organic Beauty</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- CSS -->
   <link rel="stylesheet" href="assets/style.css" />
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta name="description" content="Heaven and Beauty — Wellness & Organic Beauty ศูนย์รวมผลิตภัณฑ์ออร์แกนิค สปา และเวลเนส" />
 </head>
 <body>
-  <div class="bg-animation" aria-hidden="true">
-    <div class="floating-star"><svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12,2L13.09,8.26L22,9L13.09,9.74L12,16L10.91,9.74L2,9L10.91,8.26L12,2Z" fill="#f06292"/></svg></div>
-    <div class="floating-star"><svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12,2L13.09,8.26L22,9L13.09,9.74L12,16L10.91,9.74L2,9L10.91,8.26L12,2Z" fill="#e91e63"/></svg></div>
-    <div class="floating-star"><svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12,2L13.09,8.26L22,9L13.09,9.74L12,16L10.91,9.74L2,9L10.91,8.26L12,2Z" fill="#ec407a"/></svg></div>
-  </div>
-
+  <!-- Header -->
   <header>
     <div class="container">
       <nav class="navbar" aria-label="หลัก">
         <div class="nav-left">
-          <a href="index.html#home" class="brand" aria-label="Heaven and Beauty">
+          <a href="index.html" class="brand" aria-label="Heaven and Beauty">
             <img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="โลโก้ Heaven and Beauty" />
           </a>
           <ul class="nav-menu" id="navMenu">
-            <li><a class="active" href="index.html">หน้าแรก</a></li>
+            <li><a href="index.html" class="active">หน้าแรก</a></li>
             <li><a href="products.html">ผลิตภัณฑ์</a></li>
             <li><a href="about.html">เกี่ยวกับเรา</a></li>
             <li><a href="services.html">สปา</a></li>
@@ -48,32 +47,59 @@
     </div>
   </section>
 
-  <!-- Products teaser (สามารถลิงก์ไปหน้า products) -->
-  <section class="products" id="products">
+  <!-- Featured Products -->
+  <section class="products">
     <div class="container">
       <h2>ผลิตภัณฑ์แนะนำ</h2>
-      <div class="product-categories" role="tablist" aria-label="หมวดหมู่สินค้า">
-        <a class="category-btn active" href="products.html">ดูทั้งหมดในหน้าผลิตภัณฑ์</a>
-      </div>
       <div class="products-grid">
-        <div class="product-card" data-category="skincare">
-          <div class="product-image"><img src="https://i.postimg.cc/rp8Cz6hX/image.jpg" alt="อะโทมี่ เฟรช ซัน โลชั่น" loading="lazy"></div>
-          <div class="product-info"><h3>อะโทมี่ เฟรช ซัน โลชั่น</h3><p>ครีมกันแดดสูตรอินออร์แกนิก</p><div class="product-price">฿xxxx</div><div class="product-actions"><a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a></div></div>
+        <!-- 1 -->
+        <div class="product-card">
+          <div class="product-image">
+            <img src="https://i.postimg.cc/rp8Cz6hX/image.jpg" alt="อะโทมี่ เฟรช ซัน โลชั่น" loading="lazy">
+          </div>
+          <div class="product-info">
+            <h3>อะโทมี่ เฟรช ซัน โลชั่น</h3>
+            <p>ครีมกันแดดสูตรอินออร์แกนิก</p>
+            <div class="product-price">฿xxxx</div>
+            <div class="product-actions">
+              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
+            </div>
+          </div>
         </div>
-        <div class="product-card" data-category="skincare">
-          <div class="product-image"><img src="https://i.postimg.cc/HLp4jGSC/image.jpg" alt="อะโทมี่ แอบโซลูท" loading="lazy"></div>
-          <div class="product-info"><h3>อะโทมี่ แอบโซลูท</h3><p>เอสเซนส์ ซันสกรีน เอสพีเอฟ 50+ / พีเอ++++</p><div class="product-price">฿xxx</div><div class="product-actions"><a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a></div></div>
+        <!-- 2 -->
+        <div class="product-card">
+          <div class="product-image">
+            <img src="https://i.postimg.cc/HLp4jGSC/image.jpg" alt="อะโทมี่ แอบโซลูท" loading="lazy">
+          </div>
+          <div class="product-info">
+            <h3>อะโทมี่ แอบโซลูท</h3>
+            <p>เอสเซนส์ ซันสกรีน SPF 50+ / PA++++</p>
+            <div class="product-price">฿xxx</div>
+            <div class="product-actions">
+              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
+            </div>
+          </div>
         </div>
-        <div class="product-card" data-category="wellness">
-          <div class="product-image"><img src="https://via.placeholder.com/140x140.png?text=Collagen" alt="อาหารเสริมคอลลาเจน" loading="lazy"></div>
-          <div class="product-info"><h3>อาหารเสริมคอลลาเจน</h3><p>คอลลาเจนจากธรรมชาติ ช่วยบำรุงผิวจากภายใน</p><div class="product-price">฿1,590</div><div class="product-actions"><a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a></div></div>
+        <!-- 3 -->
+        <div class="product-card">
+          <div class="product-image">
+            <img src="https://via.placeholder.com/140x140.png?text=Collagen" alt="อาหารเสริมคอลลาเจน" loading="lazy">
+          </div>
+          <div class="product-info">
+            <h3>อาหารเสริมคอลลาเจน</h3>
+            <p>คอลลาเจนจากธรรมชาติ ช่วยบำรุงผิวจากภายใน</p>
+            <div class="product-price">฿1,590</div>
+            <div class="product-actions">
+              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
+            </div>
+          </div>
         </div>
       </div>
-      <div style="text-align:center;margin-top:16px"><a class="cta-button" href="products.html">ไปที่หน้าผลิตภัณฑ์ทั้งหมด</a></div>
+      <!-- ปุ่ม "ดูทั้งหมดในหน้าผลิตภัณฑ์" ถูกลบออก -->
     </div>
   </section>
 
-  <!-- About Preview -->
+  <!-- About -->
   <section class="about" id="about">
     <div class="container">
       <div class="grid">
@@ -86,60 +112,68 @@
             <div class="stat"><div class="num">50K+</div><div class="lbl">ลูกค้าที่ไว้วางใจ</div></div>
             <div class="stat"><div class="num">100%</div><div class="lbl">ส่วนผสมธรรมชาติ</div></div>
           </div>
-          <p style="margin-top:14px"><a class="cta-button" href="about.html">อ่านต่อ</a></p>
         </div>
         <div class="about-visual">
-          <div class="luxury-frame"><div class="frame-content"><img src="https://i.postimg.cc/g0QTrJ6j/LINE-ALBUM-250925-3.jpg" alt="Heaven and Beauty – บรรยากาศร้าน" loading="lazy"></div></div>
+          <div class="luxury-frame">
+            <div class="frame-content">
+              <img src="https://i.postimg.cc/g0QTrJ6j/LINE-ALBUM-250925-3.jpg" alt="Heaven and Beauty – บรรยากาศร้าน" loading="lazy">
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Services Preview -->
+  <!-- Services -->
   <section class="services" id="services">
     <div class="container">
       <h2>สปาและบริการนวด</h2>
       <div class="services-grid">
-        <div class="service-card"><div class="service-icon"><i class="fas fa-spa" aria-hidden="true"></i></div><h3>นวดอโรมาเธอราปี</h3><p>ผ่อนคลายด้วยน้ำมันหอมระเหยบริสุทธิ์ ลดความเครียดและบำรุงผิวพรรณ</p><div class="service-price">60 นาที / ฿1,200</div><a href="services.html" class="book-btn">ดูรายละเอียด</a></div>
-        <div class="service-card"><div class="service-icon"><i class="fas fa-hand-holding-heart" aria-hidden="true"></i></div><h3>นวดแผนไทย</h3><p>ศาสตร์แห่งการบำบัดแบบดั้งเดิม ช่วยคลายกล้ามเนื้อและปรับสมดุลร่างกาย</p><div class="service-price">90 นาที / ฿990</div><a href="services.html" class="book-btn">ดูรายละเอียด</a></div>
-        <div class="service-card"><div class="service-icon"><i class="fas fa-hot-tub" aria-hidden="true"></i></div><h3>สปาหินร้อน</h3><p>ใช้หินภูเขาไฟเพื่อผ่อนคลายกล้ามเนื้อส่วนลึก กระตุ้นการไหลเวียนโลหิต</p><div class="service-price">75 นาที / ฿1,800</div><a href="services.html" class="book-btn">ดูรายละเอียด</a></div>
+        <div class="service-card">
+          <div class="service-icon"><i class="fas fa-spa"></i></div>
+          <h3>นวดอโรมาเธอราปี</h3>
+          <p>ผ่อนคลายด้วยน้ำมันหอมระเหยบริสุทธิ์ ลดความเครียดและบำรุงผิวพรรณ</p>
+          <div class="service-price">60 นาที / ฿1,200</div>
+          <a href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" class="line-btn">จองผ่าน LINE</a>
+        </div>
+        <div class="service-card">
+          <div class="service-icon"><i class="fas fa-hand-holding-heart"></i></div>
+          <h3>นวดแผนไทย</h3>
+          <p>ศาสตร์แห่งการบำบัดแบบดั้งเดิม คลายกล้ามเนื้อและปรับสมดุลร่างกาย</p>
+          <div class="service-price">90 นาที / ฿990</div>
+          <a href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" class="line-btn">จองผ่าน LINE</a>
+        </div>
+        <div class="service-card">
+          <div class="service-icon"><i class="fas fa-hot-tub"></i></div>
+          <h3>สปาหินร้อน</h3>
+          <p>ใช้หินภูเขาไฟเพื่อผ่อนคลายกล้ามเนื้อ กระตุ้นการไหลเวียนโลหิต</p>
+          <div class="service-price">75 นาที / ฿1,800</div>
+          <a href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" class="line-btn">จองผ่าน LINE</a>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- Wellness Preview -->
+  <!-- Wellness -->
   <section class="features" id="wellness">
     <div class="container">
       <h2>ความงามและสุขภาพแบบองค์รวม</h2>
       <div class="features-grid">
-        <div class="feature-card"><div class="feature-icon">🌿</div><h3>100% ออร์แกนิค</h3><p>ส่วนผสมจากธรรมชาติล้วนๆ ปลอดสารเคมีที่เป็นอันตราย</p></div>
-        <div class="feature-card"><div class="feature-icon">🧘‍♀️</div><h3>ผ่อนคลายจิตใจ</h3><p>รู้สึกสงบ ผ่อนคลาย และเติมพลัง</p></div>
+        <div class="feature-card"><div class="feature-icon">🌿</div><h3>100% ออร์แกนิค</h3><p>ส่วนผสมจากธรรมชาติล้วนๆ ปลอดสารเคมีอันตราย เพื่อผิวที่สุขภาพดี</p></div>
+        <div class="feature-card"><div class="feature-icon">🧘‍♀️</div><h3>ผ่อนคลายจิตใจ</h3><p>ผลิตภัณฑ์ช่วยให้รู้สึกสงบและเติมพลังให้ร่างกายและจิตใจ</p></div>
         <div class="feature-card"><div class="feature-icon">✨</div><h3>เปล่งปลั่งธรรมชาติ</h3><p>เผยผิวที่สดใส เปล่งปลั่ง และมีสุขภาพดี</p></div>
       </div>
-      <div style="text-align:center;margin-top:16px"><a class="cta-button" href="wellness.html">ดูโปรแกรม Wellness</a></div>
     </div>
   </section>
 
-  <!-- Contact Preview -->
-  <section class="contact" id="contact">
-    <div class="container">
-      <h2>ติดต่อเรา</h2>
-      <p class="contact-subtitle">เราพร้อมให้คำปรึกษาและดูแลความงามของคุณด้วยใจ<br>ติดตามข่าวสารและเคล็ดลับความงามเฉพาะจากเรา</p>
-      <div class="contact-info">
-        <div class="contact-item"><span class="contact-item-icon" aria-hidden="true">📍</span><h3>สาขาหลัก</h3><p>โครงการ HAVANA<br>เลขที่777 333 Cho Ho, เมือง Nakhon Ratchasima 30000</p></div>
-        <div class="contact-item"><span class="contact-item-icon" aria-hidden="true">📞</span><h3>โทรศัพท์</h3><p>098-549-7939<br>เปิดทุกวัน 10:00–22:00 น.</p></div>
-        <div class="contact-item"><span class="contact-item-icon" aria-hidden="true">💌</span><h3>อีเมล</h3><p>info@heavenbeauty.com<br>support@heavenbeauty.com<br><span>ตอบกลับภายใน 24 ชั่วโมง</span></p></div>
-      </div>
-      <div style="text-align:center;margin-top:16px"><a class="cta-button" href="contact.html">ดูรายละเอียดการติดต่อ & แผนที่</a></div>
-    </div>
-  </section>
-
+  <!-- Footer -->
   <footer>
     <div class="container">
       <p>&copy; <span id="year"></span> Heaven &amp; Beauty. ดูแลความงามและสุขภาพด้วยใจ</p>
     </div>
   </footer>
 
+  <!-- JS -->
   <script src="assets/app.js"></script>
 </body>
 </html>
