--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <!-- 3 -->
         <div class="product-card">
           <div class="product-image">
-            <img src="https://via.placeholder.com/140x140.png?text=Collagen" alt="อาหารเสริมคอลลาเจน" loading="lazy">
+            <img src="https://i.postimg.cc/yNVXWqfB/image.jpg" alt="อาหารเสริมคอลลาเจน" loading="lazy">
           </div>
           <div class="product-info">
             <h3>อาหารเสริมคอลลาเจน</h3>
