--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="product-info">
             <h3>อาหารเสริมคอลลาเจน</h3>
             <p>คอลลาเจนจากธรรมชาติ ช่วยบำรุงผิวจากภายใน</p>
-            <div class="product-price">฿1,590</div>
+            <div class="product-price">฿xxx</div>
             <div class="product-actions">
               <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
             </div>
