--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
   <title>Heaven and Beauty - Wellness & Organic Beauty</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="assets/style.css" />
+  <link rel="stylesheet" href="assets/style.css?v=4" />
+
   <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <meta name="description" content="Heaven and Beauty — Wellness & Organic Beauty ศูนย์รวมผลิตภัณฑ์ออร์แกนิค สปา และเวลเนส" />
 </head>
 <body>
+  <!-- Soft animated background -->
+  <div class="bg-animation" aria-hidden="true">
+    <div class="floating-star"><svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12,2L13.09,8.26L22,9L13.09,9.74L12,16L10.91,9.74L2,9L10.91,8.26L12,2Z" fill="#f06292"/></svg></div>
+    <div class="floating-star"><svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12,2L13.09,8.26L22,9L13.09,9.74L12,16L10.91,9.74L2,9L10.91,8.26L12,2Z" fill="#e91e63"/></svg></div>
+    <div class="floating-star"><svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12,2L13.09,8.26L22,9L13.09,9.74L12,16L10.91,9.74L2,9L10.91,8.26L12,2Z" fill="#ec407a"/></svg></div>
+  </div>
+
   <!-- Header -->
   <header>
     <div class="container">
@@ -20,6 +29,7 @@
           <a href="index.html" class="brand" aria-label="Heaven and Beauty">
             <img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="โลโก้ Heaven and Beauty" />
           </a>
+
           <ul class="nav-menu" id="navMenu">
             <li><a href="index.html" class="active">หน้าแรก</a></li>
             <li><a href="products.html">ผลิตภัณฑ์</a></li>
@@ -29,6 +39,7 @@
             <li><a href="contact.html">ติดต่อ</a></li>
           </ul>
         </div>
+
         <div class="nav-right">
           <button class="hamburger-btn" id="hamburger" aria-label="เปิด/ปิดเมนู">
             <span class="bar"></span><span class="bar"></span><span class="bar"></span>
@@ -95,7 +106,7 @@
           </div>
         </div>
       </div>
-      <!-- ปุ่ม "ดูทั้งหมดในหน้าผลิตภัณฑ์" ถูกลบออก -->
+      <!-- ปุ่ม “ดูหน้าผลิตภัณฑ์ทั้งหมด” ถูกตัดออกตามที่แจ้ง -->
     </div>
   </section>
 
@@ -174,6 +185,6 @@
   </footer>
 
   <!-- JS -->
-  <script src="assets/app.js"></script>
+  <script src="assets/app.js?v=4"></script>
 </body>
 </html>
