--- a/contact.html
+++ b/contact.html
@@ -3,95 +3,84 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ติดต่อเรา — Heaven & Beauty</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>ติดต่อเรา | Heaven and Beauty</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous"/>
 </head>
 <body>
-  <div class="bg-animation" aria-hidden="true">
-    <div class="floating-star"><svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12,2L13.09,8.26L22,9L13.09,9.74L12,16L10.91,9.74L2,9L10.91,8.26L12,2Z" fill="#f06292"/></svg></div>
-    <div class="floating-star"><svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12,2L13.09,8.26L22,9L13.09,9.74L12,16L10.91,9.74L2,9L10.91,8.26L12,2Z" fill="#e91e63"/></svg></div>
-    <div class="floating-star"><svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12,2L13.09,8.26L22,9L13.09,9.74L12,16L10.91,9.74L2,9L10.91,8.26L12,2Z" fill="#ec407a"/></svg></div>
-  </div>
-
   <header>
     <div class="container">
       <nav class="navbar" aria-label="หลัก">
         <div class="nav-left">
-          <a href="index.html#home" class="brand" aria-label="Heaven and Beauty">
-            <img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="โลโก้ Heaven and Beauty" />
-          </a>
-          <ul class="nav-menu" id="navMenu">
+          <a href="index.html" class="brand"><img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="Heaven and Beauty"></a>
+          <ul class="nav-menu" id="navMenuTop">
             <li><a href="index.html">หน้าแรก</a></li>
             <li><a href="products.html">ผลิตภัณฑ์</a></li>
             <li><a href="about.html">เกี่ยวกับเรา</a></li>
             <li><a href="services.html">สปา</a></li>
-            <li><a href="wellness.html">Wellness</a></li>
-            <li><a class="active" href="contact.html">ติดต่อ</a></li>
+            <li><a href="contact.html" class="active">ติดต่อ</a></li>
           </ul>
-        </div>
-        <div class="nav-right">
-          <button class="hamburger-btn" id="hamburger" aria-label="เปิด/ปิดเมนู">
-            <span class="bar"></span><span class="bar"></span><span class="bar"></span>
-          </button>
         </div>
       </nav>
     </div>
   </header>
 
   <section class="page-hero">
-    <div class="container inner">
-      <span class="kicker">Contact</span>
+    <div class="inner">
       <h1>ติดต่อเรา</h1>
-      <div class="breadcrumbs"><a href="index.html">หน้าแรก</a> • <span>ติดต่อเรา</span></div>
     </div>
   </section>
 
-  <section class="page-section">
+  <section class="contact">
     <div class="container">
-      <div class="contact-info" style="margin-bottom:24px">
+      <p class="contact-subtitle">เราพร้อมให้คำปรึกษาและดูแลความงามของคุณด้วยใจ</p>
+
+      <div class="contact-info">
         <div class="contact-item">
-          <span class="contact-item-icon" aria-hidden="true">📍</span>
-          <h3>สาขาหลัก</h3>
-          <p>โครงการ HAVANA<br>เลขที่777 333 Cho Ho, เมือง Nakhon Ratchasima 30000</p>
+          <strong>สาขาหลัก</strong><br>
+          โครงการ HAVANA<br>เลขที่777 333 Cho Ho, เมือง Nakhon Ratchasima 30000
         </div>
         <div class="contact-item">
-          <span class="contact-item-icon" aria-hidden="true">📞</span>
-          <h3>โทรศัพท์</h3>
-          <p>098-549-7939<br>เปิดทุกวัน 10:00–22:00 น.</p>
+          <strong>โทรศัพท์</strong><br>
+          098-549-7939<br>เปิดทุกวัน 10:00–22:00 น.
         </div>
         <div class="contact-item">
-          <span class="contact-item-icon" aria-hidden="true">💌</span>
-          <h3>อีเมล</h3>
-          <p>info@heavenbeauty.com<br>support@heavenbeauty.com<br><span>ตอบกลับภายใน 24 ชั่วโมง</span></p>
+          <strong>อีเมล</strong><br>
+          info@heavenbeauty.com<br>support@heavenbeauty.com<br>ตอบกลับภายใน 24 ชั่วโมง
         </div>
       </div>
 
       <div class="map-wrap" role="region" aria-label="แผนที่สาขาหลัก">
-        <iframe loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps?q=%E0%B9%82%E0%B8%84%E0%B8%A3%E0%B8%87%E0%B8%81%E0%B8%B2%E0%B8%A3%20HAVANA%20777%20333%20Cho%20Ho%2C%20Nakhon%20Ratchasima%2030000&hl=th&z=16&output=embed"></iframe>
+        <iframe
+          loading="lazy"
+          allowfullscreen
+          referrerpolicy="no-referrer-when-downgrade"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3852.6128267044464!2d102.1471251!3d15.0695165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31194bd6f78b22cd%3A0x8bb1d3e4f7001978!2z4LmB4Liq4LiH4LmE4LiX4Lii4LiZ4Lin4LiU4LmA4Lie4Li34LmI4Lit4Liq4Li44LiC4Lig4Liy4Lie!5e0!3m2!1sen!2sth!4v1700000000000!5m2!1sen!2sth">
+        </iframe>
       </div>
 
-      <div class="card" style="margin-top:16px">
-        <h3 style="margin:0 0 8px">ปุ่มนำทางด่วน</h3>
-        <p style="margin:0">
-          <a class="line-btn" href="https://maps.google.com/?daddr=Havana%20Cho%20Ho%20Nakhon%20Ratchasima" target="_blank" rel="noopener">เปิดเส้นทางใน Google Maps</a>
-        </p>
-      </div>
-
-      <div class="social-icons" aria-label="โซเชียลมีเดีย" style="margin-top:24px">
-        <a href="https://facebook.com/yourpage" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+      <div class="social-icons" aria-label="โซเชียลมีเดีย">
+        <a href="https://www.facebook.com/people/Sangthai-massage/100089101373153/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
         <a href="https://instagram.com/yourpage" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="https://line.me/ti/p/~yourlineid" target="_blank" aria-label="LINE"><i class="fab fa-line"></i></a>
-        <a href="https://tiktok.com/@yourpage" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+        <a href="https://lin.ee/piYhcCd" target="_blank" aria-label="LINE"><i class="fab fa-line"></i></a>
+        <a href="https://www.tiktok.com/@sittined.n" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
       </div>
     </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; <span id="year"></span> Heaven &amp; Beauty. ดูแลความงามและสุขภาพด้วยใจ</p>
+      <p>&copy; <span id="year"></span> Heaven &amp; Beauty</p>
     </div>
   </footer>
+
+  <nav class="bottom-nav" id="bottomNav" aria-label="เมนูล่าง">
+    <a href="index.html"><i class="fas fa-home"></i><span>หน้าแรก</span></a>
+    <a href="products.html"><i class="fas fa-box-open"></i><span>ผลิตภัณฑ์</span></a>
+    <a href="about.html"><i class="fas fa-info-circle"></i><span>เกี่ยวกับเรา</span></a>
+    <a href="services.html"><i class="fas fa-spa"></i><span>สปา</span></a>
+    <a href="contact.html"><i class="fas fa-phone-alt"></i><span>ติดต่อ</span></a>
+  </nav>
 
   <script src="assets/app.js"></script>
 </body>
